ie_um/src/main/java/com/example/ie_um/global/error/exception/NotFoundGroupException.java
package com.example.ie_um.global.error.exception;

public abstract class NotFoundGroupException extends RuntimeException{
    public NotFoundGroupException(String message) {
        super(message);
    }
}
